# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,12 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import chartRouter from "./chart";
+import drawingsRouter from "./drawings";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(chartRouter);
+router.use(drawingsRouter);
 
 export default router;
